--- a/emacs/org-init.org
+++ b/emacs/org-init.org
@@ -1,5 +1,4 @@
 #+TITLE: Emacs Init
-#+STARTUP: showall
 
 * Plugins
 ** Productivity
@@ -81,6 +80,23 @@ Asteriks are Ugly
     :ensure t
     :config
     (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
+
+#+END_SRC
+
+*** Other
+#+BEGIN_SRC emacs-lisp
+
+  (setq org-src-fontify-natively t)
+
+#+END_SRC
+
+** Fun
+You have to have alittle fun in your life.
+*** Hacker-Typer
+#+BEGIN_SRC emacs-lisp
+
+  (use-package hacker-typer
+    :ensure t)
 
 #+END_SRC
 
