Added some more keybindings.

--- a/emacs/org-init.org
+++ b/emacs/org-init.org
@@ -172,4 +172,8 @@ Pretty Colors
 
   ;; God-Mode
   (global-set-key (kbd "<escape>") 'god-local-mode)
+  (define-key god-local-mode-map (kbd "z") 'repeat)
+  (define-key god-local-mode-map (kbd "i") 'god-local-mode)
 #+END_SRC
+
+  
