--- a/emacs/org-init.org
+++ b/emacs/org-init.org
@@ -115,6 +115,23 @@ GNU-Bison mode for Lexers
     :ensure t)
 
 #+END_SRC
+*** RMarkdown
+Markdown but better.
+#+BEGIN_SRC emacs-lisp
+
+  (defun rmd-mode ()
+    "ESS Markdown mode for rmd files"
+    (interactive)
+    (require 'polymode)
+    (require 'poly-R)
+    (require 'poly-markdown)     
+    (poly-markdown+r-mode))
+
+  ;; Need to set .rmd files = rmd-mode
+  (setq auto-mode-alist (append '(("\\.rmdp$" . rmd-mode))
+        auto-mode-alist))
+
+#+END_SRC 
 ** Org
 *** Org-Bullets
 Asteriks are Ugly
@@ -168,6 +185,12 @@ Asteriks are Ugly
 
 #+END_SRC
 
+** Theme
+#+BEGIN_SRC emacs-lisp
+
+  (load-theme 'xresources t t)
+
+#+END_SRC
 * Keyboard Shortcuts
 #+BEGIN_SRC emacs-lisp
 
